# Noware

./: .gitignore  CMakeLists.txt  DevlopmentLog.md  Noware.sln  README.md
Noware/: CMakeLists.txt  Noware.vcxproj  Noware.vcxproj.filters
Noware/include/Noware/: engine.h  graphics.h  utility.h
Noware/include/Noware/engine/: engine.h  game_object.h  main_loop.h  map.h  map_tile.h
Noware/include/Noware/graphics/: drawable.h  graphics.h  window.h
Noware/include/Noware/util/: configure.h  externals.h  io_font_manager.h  io_image_manager.h  macro_field.h  math.h  nm_vectors.h  system_helper.h  utility.h
Noware/include/Noware_Game/: game.h
Noware/include/Noware_Game/game/: game.h
Noware/include/nw/game/: game.h
Noware/src/: creator.cpp
Noware/src/Noware/: CMakeLists.txt  engine.cpp  graphics.cpp  utility.cpp
Noware/src/Noware/engine/: engine.cpp  game_object.cpp  main_loop.cpp  map.cpp  map_tile.cpp
Noware/src/Noware/graphics/: drawable.cpp  graphics.cpp  window.cpp
Noware/src/Noware/util/: configure.cpp  io_font_manager.cpp  system_helper.cpp  utility.cpp
Noware/src/Noware_Game/: CMakeLists.txt  game.cpp
Noware/src/Noware_Game/game/: game.cpp
